# 2025_advent_of_small_ml

./: README.md  pyproject.toml
src/day1/: README.md
src/day2/: README.md  eval_checkpoints.py  get_data.sh  grpo_datasets.py  grpo_evaluator.py  grpo_llms.py  grpo_logging.py  grpo_train.py  grpo_utils.py  plotter.py
src/day3/: README.md  build_ds.py  data_eval.py  eval_checkpoints.py  grpo_datasets.py  grpo_evaluator.py  grpo_logging.py  grpo_train.py  grpo_utils.py  plotter.py
src/day4/: README.md  debug_compare.py  eval_with_steering.py  llms.py  main.py  math_dataset.py  plotter.py  test_tokenization.py  utils.py  vllm_client.py  vllm_server.py
src/day5/: README.md  bayesian_optimize_steering.py  build_steering_vectors.py  create_gif.py  plot_bayesian_optimization.py  plot_bayesian_optimization_2d.py  plot_bayesian_optimization_parallel.py
src/day6/: README.md  abstracts.json  build_creativity_vectors.py  creativity_eval_results.json  creativity_vector.json  creativity_vector_test_set.json  eval_creativity_vectors.py
